# docs/swagger.json
@@ -194,7 +194,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.Article"
+                                            "$ref": "#/definitions/models.PackedArticleModel"
                                         }
                                     }
                                 }
@@ -262,9 +262,12 @@
     "definitions": {
         "models.Article": {
             "type": "object",
+            "required": [
+                "author_id"
+            ],
             "properties": {
-                "author": {
-                    "$ref": "#/definitions/models.Person"
+                "author_id": {
+                    "type": "string"
                 },
                 "content": {
                     "$ref": "#/definitions/models.Content"
@@ -274,6 +277,36 @@
                 },
                 "id": {
                     "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Author": {
+            "type": "object",
+            "required": [
+                "firstname",
+                "lastname"
+            ],
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "firstname": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 2,
+                    "example": "John"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "lastname": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 2,
+                    "example": "Doe"
                 },
                 "updated_at": {
                     "type": "string"
@@ -297,9 +330,12 @@
         },
         "models.CreateArticleModel": {
             "type": "object",
+            "required": [
+                "author_id"
+            ],
             "properties": {
-                "author": {
-                    "$ref": "#/definitions/models.Person"
+                "author_id": {
+                    "type": "string"
                 },
                 "content": {
                     "$ref": "#/definitions/models.Content"
@@ -323,32 +359,35 @@
                 }
             }
         },
-        "models.Person": {
+        "models.PackedArticleModel": {
             "type": "object",
-            "required": [
-                "firstname",
-                "lastname"
-            ],
             "properties": {
-                "firstname": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 2,
-                    "example": "John"
+                "author": {
+                    "$ref": "#/definitions/models.Author"
                 },
-                "lastname": {
-                    "type": "string",
-                    "maxLength": 50,
-                    "minLength": 2,
-                    "example": "Doe"
+                "content": {
+                    "$ref": "#/definitions/models.Content"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         },
         "models.UpdateArticleModel": {
             "type": "object",
+            "required": [
+                "author_id",
+                "id"
+            ],
             "properties": {
-                "author": {
-                    "$ref": "#/definitions/models.Person"
+                "author_id": {
+                    "type": "string"
                 },
                 "content": {
                     "$ref": "#/definitions/models.Content"
