# models/article.go
@@ -2,11 +2,6 @@ package models
 
 import "time"
 
-type Person struct {
-	Firstname string `json:"firstname" binding:"required" minLength:"2" maxLength:"50" example:"John"`
-	Lastname  string `json:"lastname" binding:"required" minLength:"2" maxLength:"50" example:"Doe"`
-}
-
 type Content struct {
 	Title string `json:"title" binding:"required"`
 	Body  string `json:"body" binding:"required"`
@@ -15,28 +10,28 @@ type Content struct {
 type Article struct {
 	Id         string     `json:"id"`
 	Content    Content    `json:"content"`
-	Author     Person     `json:"author"`
+	AuthorId   string     `json:"author_id" binding:"required"`
 	Created_at time.Time  `json:"created_at"`
 	Updated_at *time.Time `json:"updated_at"`
 	Deleted_at *time.Time `json:"-"`
 }
 
 type CreateArticleModel struct {
+	Content  Content `json:"content"`
+	AuthorId string  `json:"author_id" binding:"required"`
+}
+
+type PackedArticleModel struct {
+	Id         string     `json:"id"`
 	Content    Content    `json:"content"`
-	Author     Person     `json:"author"`
+	Author     Author     `json:"author"`
+	Created_at time.Time  `json:"created_at"`
+	Updated_at *time.Time `json:"updated_at"`
+	Deleted_at *time.Time `json:"-"`
 }
 
 type UpdateArticleModel struct {
-	Id         string     `json:"id" binding:"required"`
-	Content    Content    `json:"content"`
-	Author     Person     `json:"author"`
-}
-
-type JSONResult struct {
-	Message string      `json:"message"`
-	Data    interface{} `json:"data"`
-}
-
-type JSONError struct {
-	Error string `json:"error"`
+	Id       string  `json:"id" binding:"required"`
+	Content  Content `json:"content"`
+	AuthorId string  `json:"author_id" binding:"required"`
 }
